--- a/assets/scss/partials/blocks-core.scss
+++ b/assets/scss/partials/blocks-core.scss
@@ -433,6 +433,10 @@ img {
                     padding: 8%;
                 }
             }
+
+            &.wave-schedule {
+                margin-bottom: 0;
+            }
         }
     }
 }
